--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     
     <title> <!-- title goes here --> </title>
 </head>
+<section>
+    <img src="" alt="">
+</section>
 <body>
 
 <script src="js/app.js"></script>
